# fuzzy-rust

./: Cargo.toml  README.md  coverage_kcov.sh
src/lib/: antecedent.rs  consequent.rs  engine.rs  expression.rs  hedge.rs  lib.rs  macros.rs  math.rs  norm.rs  rule.rs  rule_block.rs  term.rs  variable.rs
