[package]
name = "fuzzy-rust"
version = "0.1.0"
authors = ["Artur Iwaniec <artur.iwaniec@wp.pl>"]
edition = "2018"

[lib]
name = "fuzzy"
path = "src/lib/lib.rs"

[[bin]]
name = "fuzzy-test"
path = "src/bin/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
